# haskell2

./: README.md  haskell2.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.4.8/: haskell2-0.1.0.0-inplace.conf  package.cache
