cabal-version:       3.0
name:                haskell2
version:             0.1.0.0
build-type:          Simple

library
    exposed-modules:    MyLib
    hs-source-dirs:     src
    build-depends:      base ^>=4.17.0.0,
                        ansi-terminal
    default-language:   Haskell2010

executable fractal
    main-is:           Main.hs
    hs-source-dirs:    app
    build-depends:      base ^>=4.17.0.0,
                        haskell2,
                        ansi-terminal
    default-language:   Haskell2010